Closed Bug 841020 Opened 13 years ago Closed 13 years ago

Volume status (level/mute) are not persistent in Youtube html5 video

Categories

(Core :: Audio/Video, defect)

21 Branch
x86
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla21
Tracking Status
firefox20 --- unaffected
firefox21 + verified

People

(Reporter: alice0775, Assigned: kinetik)

References

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

Build Identifier: http://hg.mozilla.org/mozilla-central/rev/161a347bda5b Mozilla/5.0 (Windows NT 6.1; WOW64; rv:21.0) Gecko/20130213 Firefox/21.0 ID:20130213031137 Steps to Reproduce: 1. Open youtube html5 video http://www.youtube.com/watch?v=BH0BNbwqNK8&webm=1&html5=1 2. Change volume level/mute with Volume slider 3. Close the tab 4. Open again the youtube html5 video Actual Results: Volume status (level/mute) are not persistent Expected Results: Volume status (level/mute) should be persistent Regression window(m-c) Good: http://hg.mozilla.org/mozilla-central/rev/784b9beebe90 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:21.0) Gecko/20130211 Firefox/21.0 ID:20130211052314 Bad: http://hg.mozilla.org/mozilla-central/rev/93ba23f414ff Mozilla/5.0 (Windows NT 6.1; WOW64; rv:21.0) Gecko/20130211 Firefox/21.0 ID:20130211111327 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=784b9beebe90&tochange=93ba23f414ff Regression window(m-i) Good: http://hg.mozilla.org/integration/mozilla-inbound/rev/80fa2c61df14 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:21.0) Gecko/20130210 Firefox/21.0 ID:20130210171017 Bad: http://hg.mozilla.org/integration/mozilla-inbound/rev/0b521694bdbc Mozilla/5.0 (Windows NT 6.1; WOW64; rv:21.0) Gecko/20130210 Firefox/21.0 ID:20130210174716 Pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=80fa2c61df14&tochange=0b521694bdbc Suspected: Bug 837430
And There is contradiction between actual volume level and volume status icon indication.
Er, not sure what happened there... the SetVolume call went missing in my patch.
Status: NEW → ASSIGNED
QA Contact: kinetik
Assignee: nobody → kinetik
QA Contact: kinetik
Attached patch patch v0 (obsolete) — Splinter Review
Attachment #713624 - Flags: review?(cpearce)
Attached patch patch v0Splinter Review
Attachment #713624 - Attachment is obsolete: true
Attachment #713624 - Flags: review?(cpearce)
Attachment #713625 - Flags: review?(cpearce)
Attachment #713625 - Flags: review?(cpearce) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/0b7571ca7153 Thanks for finding this regression and reporting it so quickly!
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
When I mute the video then close tab,then again open this video,it's still muted.
Mozilla/5.0 (Windows NT 6.1; rv:21.0) Gecko/20100101 Firefox/21.0 Mozilla/5.0 (Windows NT 6.1; rv:23.0) Gecko/20130421 Firefox/23.0 Verified as fixed on Firefox 21 (Build ID:20130416200523) and on Firefox latest nightly (Build ID:20130421031002).
Mozilla/5.0 (Windows NT 6.1; rv:21.0) Gecko/20100101 Firefox/21.0 Mozilla/5.0 (Windows NT 6.1; rv:23.0) Gecko/20130426 Firefox/23.0 Verified as fixed on Firefox 21 (Build ID:20130425162858) and on Firefox latest nightly (Build ID:20130426030834).
On Latest nightly and FF 21b6 I've got this results: 1. Open a video via youtube and set volum at about 30% 2. Close tab and reopen same video in another tab. Results: volum is set in step 2 at 30%. 1. Open a video via youtube and set volum at 30% and then turn it to mute. 2. Close tab and reopen same video in another tab. Results: volum is set to 30% even if in step 1 before closing the tab i turned it to mute. Is this expected? This is happening on Google Chrome and Opera too.
Flags: needinfo?
Yes,I have same results in those browsers.
Flags: needinfo?
(In reply to kachanovsergey1 from comment #11) > Yes,I have same results in those browsers. Same results on RC1 / RC2 : 20130507015204 / 20130507220413
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: