Bug 841020 - Restore missing SetVolume when initializing AudioStream.  r=cpearce